# collab-splats

./: .gitignore  CACHE_ANALYSIS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  env.yml  notebook_updated_code.py  paper_figures.md  pyproject.toml  requirements.txt  setup.sh  setup_nocuda.sh
.github/workflows/: lint.yml  lint_notebooks.yml  test.yml  test_notebooks.yml
collab_splats/: __init__.py
collab_splats/configs/: __init__.py  rade_features_method.py  rade_gs_method.py
collab_splats/datamanagers/: __init__.py  features_datamanager.py  grouping_datamanager.py
collab_splats/models/: __init__.py  rade_features_model.py  rade_gs_model.py
collab_splats/utils/: __init__.py  camera_utils.py  features.py  gcs_helpers.py  grouping.py  losses.py  mesh.py  mesh_updated.py  meshlib_pointcloud_to_mesh_examples.py  metrics.py  model_loading.py  plotting.py  pointcloud.py  segmentation.py  trainer_config.py  utils.py  vggt_utils.py  visualization.py
collab_splats/wrapper/: __init__.py  config.py  splatter.py
docs/: QUICK_START_GCS.md  gcs_integration_proposal.md  paper_figures.md
docs/examples/: gcs_sync_example.py
docs/splats/: HDBSCAN_FIXES.md  REFACTORING_SUMMARY.md  USAGE_GUIDE.md  cluster_mesh.py  cluster_mesh_old.py  create_mesh.ipynb  derive_splats.ipynb  run_pipeline.py  run_sequential.sh  splat_model.ipynb  update-meshlib.ipynb  visualization.ipynb
docs/splats/configs/: base.yaml
docs/splats/configs/datasets/: ants_date-11162025_video-GH010210.yaml  bicycle.yaml  birds_date-02062024_video-C0043.yaml  birds_date-05182024_video-C0065.yaml  birds_date-05192024_video-C0067.yaml  birds_date-05232024_video-GH010070.yaml  birds_date-05272024_video-GH010097.yaml  birds_date-05272024_video-GH010105.yaml  birds_date-06012024_video-GH010164.yaml  birds_date-11052023_video-PXL_20231105_154956078.yaml  birds_date-11262023_video-PXL_20231126_163807901.yaml  birds_date-11262023_video-PXL_20231126_164752098.yaml  birds_date-11262023_video-PXL_20231126_165334749.yaml  example.yaml  example_images.yaml  rats_date-07112024_video-C0119.yaml
examples/: create_mesh.ipynb  derive_mesh.ipynb  derive_splats.ipynb  derive_splats.py  gcloud_data_interface.ipynb  push_gcloud.py  run_pipeline.py  visualization.ipynb
ns-extension/: __init__.py
ns-extension/submodules/tetra_triangulation/: README.md
ns-extension/utils/: camera_utils.py  losses.py  mesh.py  utils.py
ns_extension/: __init__.py
ns_extension/configs/: rade_features_method.py  rade_gs_method.py
ns_extension/datamanagers/: features_datamanager.py
ns_extension/models/: __init__.py  rade_features_model.py  rade_gs_model.py
ns_extension/utils/: camera_utils.py  features.py  grouping.py  losses.py  mesh.py  metrics.py  plotting.py  segmentation.py  utils.py
ns_extension/wrapper/: splatter.py
outputs/unnamed/rade-gs/2025-07-01_155536/: config.yml
outputs/unnamed/splatfacto/2025-07-11_150524/: config.yml
rade_gs/: __init__.py
rade_gs/configs/: __init__.py  rade_gs_config.py  rade_gs_method.py  trainer_config.py
rade_gs/models/: __init__.py  rade_gs_model.py
rade_gs/utils/: __init__.py  camera_utils.py  losses.py  metrics.py  rade_gs_strategy.py
scripts/: clean.sh  clean_notebooks.sh  cleanup_and_pull.py  done.sh  lint.sh  lint_notebooks.sh  list_gcs_sessions.py  manage_local_sessions.py  simple_cleanup.sh  simple_pull.py  test.sh  test_notebooks.sh
stage/: README_semantic_dictionary.md  compare-vggtx-infinitevggt.ipynb  create_terrarium_masks.ipynb  extract-colmap-infinitevggt.ipynb  extract-colmap-mapanything.ipynb  extract-colmap-vggt.ipynb  mapanything_demo.ipynb  mapanything_utils.py  plot-colmap-vggt-cameras.ipynb  push_mesh_to_gcloud.py  run_semantic_batch.sh  run_semantic_dictionary.py  semantic_dictionary_example.json  test_grouping.ipynb  test_grouping.py  test_semantic_dictionary.ipynb
stage/clustering/: clustering_utils.py  feature_clustering.ipynb  feature_clustering_analysis.ipynb
stage/gaussian-grouping/: test_grouping.ipynb  test_grouping.py  test_segmentation.ipynb
stage/wandb/: latest-run
stage/wandb/run-20250923_200419-dz79sgfn/files/: wandb-metadata.json
stage/wandb/run-20250923_200731-quj49gig/: run-quj49gig.wandb
stage/wandb/run-20250923_200731-quj49gig/files/: wandb-metadata.json
stage/wandb/run-20250923_201802-mx5rv8af/files/: wandb-metadata.json
stage/wandb/run-20250923_202425-roq0gy5f/files/: wandb-metadata.json
stage/wandb/run-20250923_205416-1es2gt0h/: run-1es2gt0h.wandb
stage/wandb/run-20250925_151753-ti4ik2go/: run-ti4ik2go.wandb
tests/: conftest.py  cuml_gpu_test.py  test_cuml.py  test_grouping.ipynb  test_grouping.py  test_meshing.ipynb  test_meshlib.py  test_meshlib_versions.py  test_models.py  test_rade_gs.ipynb
(+10 files in other folders)
