[project]
name = "collab_splats"
version = "0.0.1"
description = "ns-extension: Extension tools and models for nerfstudio"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["gaussian splatting", "depth rasterization", "mesh"]
authors = [
    { name = "Tommy Botch", email = "tommy@basis.ai" },
]

dependencies = [
    "einops",
    "ftfy",
    "gdown",
    "matplotlib",
    "nerfstudio",
    "numpy<2.0.0",
    "pillow",
    "regex",
    "torchtyping",
    "tqdm",
    "meshlib",
    "gsplat @ git+https://github.com/brian-xu/gsplat-rade.git",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.black]
line-length = 120

[project.entry-points."nerfstudio.method_configs"]
rade-gs = "collab_splats.configs.rade_gs_method:rade_gs_method"
rade-features = "collab_splats.configs.rade_features_method:rade_features_method"

[tool.setuptools.packages]
find = { include = ["collab_splats", "collab_splats.*"] }

[build-system]
requires = ["setuptools<70.0"]
build-backend = "setuptools.build_meta"