[project]
name = "collab_splats"
version = "0.0.1"
description = "ns-extension: Extension tools and models for nerfstudio"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["gaussian splatting", "depth rasterization", "mesh"]
authors = [
    { name = "Tommy Botch", email = "tommy@basis.ai" },
]

dependencies = [
    "einops",
    "ftfy",
    "gdown",
    "matplotlib",
    "numpy<2.0.0",
    "scipy==1.11.4", # Require to play nice w/ numpy
    "lightning",
    "pillow",
    "regex",
    "tqdm",
    "meshlib",
    "dotenv",
    "mobile_sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
    "gsplat @ git+https://github.com/brian-xu/gsplat-rade.git",
    "maskclip_onnx @ git+https://github.com/RogerQi/maskclip_onnx.git",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.black]
line-length = 120

[project.entry-points."nerfstudio.method_configs"]
rade-gs = "collab_splats.configs.rade_gs_method:rade_gs_method"
rade-features = "collab_splats.configs.rade_features_method:rade_features_method"

[tool.setuptools.packages]
find = { include = ["collab_splats", "collab_splats.*"] }

[build-system]
requires = ["setuptools<70.0"]
build-backend = "setuptools.build_meta"